# sab-facial-recognition-api

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/models/: model_loader.py  predictor.py
app/schemas/: schemas.py
app/services/: api_client.py
app/utils/: image_processing.py
models/: finetuned_class_names.pkl
